Fix cancel race, title reset, redis reload and thread-safety